[Filters] Fixes unnecessary scrollbar when there's nothing to scroll

--- a/src/customizations/aftersearch-nav/_aftersearch-nav.scss
+++ b/src/customizations/aftersearch-nav/_aftersearch-nav.scss
@@ -626,7 +626,7 @@
                 transition: box-shadow 0.15s ease-in-out;
                 white-space: nowrap;
                 width: min-content;
-                overflow-y: scroll;
+                overflow-y: auto;
 
                 &:-webkit-scrollbar {
                     width: 0.5rem;
